--- a/EmployeePayrollForm.html
+++ b/EmployeePayrollForm.html
@@ -11,7 +11,7 @@
     <!-- UC1 -->
     <header class="header-content header">
         <div class="logo-content">
-            <img onclick="imgclicked()" src="logo.jpg"width="43px" height="43px" alt="">
+            <img onclick="imgclicked()" src="Images/logo.jpg"width="43px" height="43px" alt="">
             <div>
                 <span class="emp-text">EMPLOYEE</span><br>
                 <span class="emp-text emp-payroll">PAYROLL</span>
@@ -29,26 +29,26 @@
                 <label class="label text"for="profile">Profile image </label>
                 <div class="profile-radio-content">
                     <label>
-                        <input type="radio" name="profile" id="profile1" value="displayImage1.png" required>
-                        <img class="profile" id="image1" src="displayImage1.png" width="50%" height="40px">
+                        <input type="radio" name="profile" id="profile1" value="Images/displayImage1.png" required>
+                        <img class="profile" id="image1" src="Images/displayImage1.png" width="50%" height="40px">
                     </label>
                 </div>
                 <div class="profile-radio-content">
                     <label>
-                        <input type="radio" name="profile" id="profile1" value="displayImage2.png" required>
-                        <img class="profile" id="image1" src="displayImage2.png" width="50%" height="40px">
+                        <input type="radio" name="profile" id="profile1" value="Images/displayImage2.png" required>
+                        <img class="profile" id="image1" src="Images/displayImage2.png" width="50%" height="40px">
                     </label>
                 </div>
                 <div class="profile-radio-content">
                     <label>
-                        <input type="radio" name="profile" id="profile1" value="displayImage3.png" required>
-                        <img class="profile" id="image1" src="displayImage3.png" width="50%" height="40px">
+                        <input type="radio" name="profile" id="profile1" value="Images/displayImage3.png" required>
+                        <img class="profile" id="image1" src="Images/displayImage3.png" width="50%" height="40px">
                     </label>
                 </div>
                 <div class="profile-radio-content">
                     <label>
-                        <input type="radio" name="profile" id="profile1" value="displayImage4.png" required>
-                        <img class="profile" id="image1" src="displayImage4.png" width="50%" height="40px">
+                        <input type="radio" name="profile" id="profile1" value="Images/displayImage4.png" required>
+                        <img class="profile" id="image1" src="Images/displayImage4.png" width="50%" height="40px">
                     </label>
                 </div>
             </div>
