--- a/EmployeePayrollForm.html
+++ b/EmployeePayrollForm.html
@@ -155,5 +155,6 @@
         </form>
     </div>
     <script type="text/javascript" src="./EmployeePayrollForm.js"></script>
+    <script type="text/javascript" src="./EmployeePayrollData.js"></script>
 </body>
 </html>
